--- a/style.css
+++ b/style.css
@@ -10,15 +10,10 @@ body {
 
 header {
     width: 100%;
-    background-color: #4a76a8;
+    background-color: #1a73e8;
     color: white;
     padding: 20px;
     text-align: center;
-}
-
-#call-count {
-    font-size: 22px;
-    margin-top: 10px;
 }
 
 #call-count {
@@ -32,74 +27,25 @@ table {
     width: 90%;
 }
 
-tr:hover {
-    background-color: #f1f1f1;
-}
-
-
 th, td {
     padding: 12px;
-    text-align: center; 
+    text-align: left;
     border-bottom: 1px solid #ddd;
 }
 
 th {
     background-color: #f0f0f0;
-    text-align: center; 
 }
 
 .priority {
+    text-align: right;
     font-weight: bold;
 }
 
-/* High priority cells in red */
 .priority.high {
     color: red;
 }
 
-/* Low priority cells in green */
 .priority.low {
     color: green;
-}
-
-#q-logo { 
-    position: absolute;
-    top: -10;
-    left: -10;
-    font-size: 100px;
-    font-weight: bold;
-    pointer-events: none; 
-    z-index: 1000; 
-    margin: 0px;
-}
-
-button {
-    background-color: #ff4a4a;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-button:hover {
-    background-color: #ff1a1a;
-}
-
-#incident-container {
-    display: flex; 
-    flex-wrap: wrap;
-    gap: 15px; 
-    justify-content: center; 
-    margin-top: 20px; 
-}
-
-.incident-box {
-    background-color: #ffffff; 
-    border-radius: 5px; 
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
-}
-
-.incident-box:hover {
-    transform: scale(1.05);
 }
